--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.15.8",
     "babel-jest": "^27.2.4",
+    "dotenv": "^10.0.0",
     "jest": "^27.2.4",
     "node-fetch": "^3.0.0",
     "whatwg-fetch": "^3.6.2"
